--- a/Changes
+++ b/Changes
@@ -7,6 +7,16 @@ Release history for Dist-Zilla-Plugin-Prereqs-DarkPAN
  - the old behaviour can be attained by specifying PKG.uri = with either an
    absolute uri, or a relative uri.
 
+ [Dependencies]
+ - new: runtime requires App::Cache
+ - new: runtime requires Parse::CPAN::Packages
+ - new: runtime requires URI
+
+ [Packages]
+ - new: Dist::Zilla::Role::xPANResolver which handles
+   fetching/caching/parsing the appropriate 02packages file and providing a
+   qualified resource for a given module.
+
 0.1.0 2011-10-29T23:27:02Z
  - First version.
 
