--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 ﻿Release history for Dist-Zilla-Plugin-Prereqs-DarkPAN
 
 {{$NEXT}}
+ [00 Minor]
+ - Remove hard dep on 5.10
 
 0.2.3 2013-11-19T05:31:25Z
  [00 Minor/Maintenance]
