--- a/Changes
+++ b/Changes
@@ -3,6 +3,14 @@
 {{$NEXT}}
  [00 Minor]
  - Remove hard dep on 5.10
+ - Upgrade deps on Module::Build
+
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - build: ↑1
+ - configure: ↑1
+ - develop: ↑1
+ - runtime: ↓1
 
 0.2.3 2013-11-19T05:31:25Z
  [00 Minor/Maintenance]
@@ -85,6 +93,13 @@
  - File::Find
  - File::Temp
 
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - build: ↑1
+ - configure: ↑1
+ - develop: +51 -3
+ - test: ↑1 -2
+
  [Documentation]
  - Copyright year updated.
  - MetaPOD annotations added.
@@ -119,6 +134,13 @@
  [Dependencies::Changed / test requires]
  - Test::More 0.88 → 0.98
 
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - build: ↑1
+ - configure: ↑1
+ - develop: ↑1
+ - test: ↑1
+
  [Misc]
  - Regenerated 000-report-versions-tiny.t to be custom build of code.
 
@@ -132,6 +154,10 @@
 
  [Dependencies::Changed / develop suggests]
  - Dist::Zilla::PluginBundle::Author::KENTNL v1.0.0 → v1.3.0
+
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - develop: ↑2
 
  [Tests::New]
  - release/minimum-version
@@ -147,6 +173,10 @@
  - App::Cache
  - Parse::CPAN::Packages
  - URI
+
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - runtime: +3
 
  [Packages]
  - new: Dist::Zilla::Role::xPANResolver which handles
