--- a/Changes
+++ b/Changes
@@ -7,7 +7,7 @@
  - Dependencies changed since 0.2.4, see misc/*.deps* for details
  - build: ↑1
  - configure: ↑1
- - develop: +4 ↑2
+ - develop: +4 ↑2 -1
  - test: ↑1
 
 0.2.4 2013-11-22T09:51:44Z
