--- a/Changes
+++ b/Changes
@@ -7,7 +7,8 @@
  - Dependencies changed since 0.2.4, see misc/*.deps* for details
  - build: ↑1
  - configure: +1 ↑1
- - develop: +17 ↑2 -10 (suggests: +2 -1)
+ - develop: +19 ↑2 -10 (suggests: +2 -1)
+ - runtime: (recommends: +1)
  - test: +3 ↑1 (recommends: +1)
 
 0.2.4 2013-11-22T09:51:44Z
