Add a basic test

--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - Remove use of Class::Load
  - Remove useless Moose::Autobox messing up dzil version load time.
  - Add MetaConfig data
+ - Basic test added.
 
  [Dependencies::Stats]
  - Dependencies changed since 0.2.4, see misc/*.deps* for details
@@ -13,7 +14,7 @@
  - configure: +2 -1 (recommends: +1)
  - develop: +24 ↑3 -14 (recommends: +1, suggests: +2 -1)
  - runtime: +2 -2 (recommends: +1)
- - test: +3 ↓1 (recommends: +3)
+ - test: +4 ↓1 (recommends: +3)
 
 0.2.4 2013-11-22T09:51:44Z
  [00 Minor]
